--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "prog4",
+  "name": "elemental-memory",
   "version": "1.0.0",
-  "description": "Personal library",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anthony Matera",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "express": "^4.19.2"
   }
 }
